syntax="proto3";
import "google/protobuf/empty.proto";
package app.trian.model;

option java_multiple_files = true;

service RolesService{
  rpc getListRole(google.protobuf.Empty) returns(ListRolesResponse){}
  rpc createRole(CreateRolesRequest) returns(RolesResponse){}
  rpc updateRole(UpdateRolesRequest)returns(RolesResponse){}
  rpc deleteRole(DeleteRoleRequest)returns(RolesResponse){}
}
message CreateRolesRequest{
  string name=1;
  string description=2;
}

message UpdateRolesRequest{
  int64 id=1;
  string name=2;
  string description=3;
}

message DeleteRoleRequest{
  int64 id=1;
}

message RolesResponse{
  int64 id=1;
  string name=2;
  string description=3;
  string createdAt=4;
  string updatedAt=5;
}

message ListRolesResponse{
  repeated RolesResponse roles=1;
}